# grail-derivatives

./: .gitignore  README.md  pyproject.toml
app/: api.py  config.py  conftest.py  debug_run.py  main.py  old.pytest.ini
app/auth/: jwt.py
app/middleware/: rate_limit.py
app/routers/: health.py  pricing.py  risk.py
app/schemas/: __init__.py  health.py  pricing.py  risk.py
scripts/: generate_validation_report.py
tests/: __init__.py  conftest.py  test_american_call.py  test_american_put.py  test_barrier_analytics.py  test_benchmark.py  test_bermudan_call.py  test_bermudan_put.py  test_binomial_golden_master.py  test_grid.py  test_price_batch.py  test_pricing_endpoints.py  test_quadratic_convergence.py  test_risk_scenario.py  test_validation_report.py  test_vanilla_call.py  test_vanilla_put.py
validation/: report.json  report.md
