[project]
name = "black-scholes-tests"
version = "0.1.0"
description = "Production-ready AI agent chat API"
requires-python = "==3.11.*"
dependencies = [
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "six<1.15.0,>=1.11.0",
    "PyYAML>=6.0",
    "pytest>=9.0.3",
    "numpy>=2.4.6",
    "matplotlib>=3.11.0",
    "fastapi>=0.137.2",
    "uvicorn>=0.49.0",
    "structlog>=26.1.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.10",
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "moto[dynamodb]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --assert=plain -s"
    
[tool.anyio]
backends = ["asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest-asyncio>=1.4.0",
    "pytest-regressions>=2.11.0",
]
